Added HTML header

--- a/docs/fr_2018_05_24/include/prefix.html
+++ b/docs/fr_2018_05_24/include/prefix.html
@@ -1,4 +1,7 @@
-<h1 class="title toc-ignore">My Amazing Project</h1>
-<h3 class="subtitle"><em>Subtitle</em></h3>
-<h4 class="author"><em>Author!</em></h4>
-
+<!--
+<h3 class="title">Projet Semestriel - S8</h3>
+<h3 class="subtitle">Département Génie Mathématique</h3>
+<h4 class="author"><em>Projet de :</em> Rand ASSWAD</h4>
+<h4 class="author"><em>A l'attention de :</em> Mme. Natalie Fortier</h4>
+<h4 class="date"><em>Présenté le :</em> date</h4>
+-->
